# AetherGuard

./: .gitignore  CMakeLists.txt  Makefile  README.md  RadioSequenceDiagram.drawio  app.db  main  main.cpp
client/: notes.txt  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx
include/: asio.hpp
radio-scanner/: index.html  package-lock.json
radio-scanner/src/: App.css  App.jsx
server/: CMakeLists.txt
server/database/: space.txt
server/src/: main.cpp
server/src/dbfunction/corefunction/: dbcorefunctions.cpp  dbcorefunctions.hpp
server/src/dbfunction/filterfunction/: dbcorefilter.cpp  dbcorefilter.hpp
server/src/ollamatest/: ollamatest.cpp
server/src/whispertinytest/: WhisperTranscriber.hpp
